--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>XX</title>
+</head>
+<body>
+    <h1>A</h1>
+    <p>B</p>
+</body>
+</html>
